--- a/software/WebBasics/WebBasics/wwwroot/cssbasics.html
+++ b/software/WebBasics/WebBasics/wwwroot/cssbasics.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <link href="/css/Styles.css" rel="stylesheet" />
     <style>
         div{
             background-color:black;color:white;
@@ -11,9 +12,22 @@
             background-color: yellow;
             color: blueviolet
         }
+        #d2 {
+            background-color: lightslategray;
+            color:lightgoldenrodyellow;
+        }
+
     </style>
 </head>
 <body>
+    <nav>
+        <a class="link-nav" href="index.html">Home</a>
+        <a class="link-nav" href="basicelements.html">Basic Elements</a>
+        <a class="link-nav" href="Table.html">Table</a>
+        <a class="link-nav" href="PresidentList.html">President List</a>
+        <a class="link-nav" href="cssbasics.html">Css Basics</a>
+    </nav>
+    <hr />
     <div style="background-color:lightcyan;color:red">
         Inline: Sapien elit in malesuada semper mi, id sollicitudin urna fermentum.
     </div>
@@ -29,4 +43,5 @@
     <div id="d2"></div>\
     page style selected by element name id:
     Sapien elit in malesuada semper mi, id sollicitudin urna fermentum.
+</body>
 </html>
