--- a/software/WebBasics/WebBasics/wwwroot/PresidentList.html
+++ b/software/WebBasics/WebBasics/wwwroot/PresidentList.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="utf-8" />
     <title>President List</title>
+    <link href="/css/Styles.css" rel="stylesheet" />
 </head>
 <body>
     <header>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="basicelements.html">Basic Elements</a>
-            <a href="PresidentList.html">President List</a>
+            <a class="link-nav" href="index.html">Home</a>
+            <a class="link-nav" href="basicelements.html">Basic Elements</a>
+            <a class="link-nav" href="Table.html">Table</a>
+            <a class="link-nav" href="PresidentList.html">President List</a>
+            <a class="link-nav" href="cssbasics.html">Css Basics</a>
         </nav>
         <hr />
         <h1 style="background-color:lightgoldenrodyellow">President List</h1>
