--- a/software/WebBasics/WebBasics/wwwroot/index.html
+++ b/software/WebBasics/WebBasics/wwwroot/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="utf-8" />
     <title>Web Basics </title>
+    <link href="/css/Styles.css" rel="stylesheet" />
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="basicelements.html">Basic Elements</a>
-        <a href="Table.html">Table</a>
-        <a href="PresidentList.html">President List</a>
-        <a href="cssbasics.html">Css Basics/a>
+        <a class="link-nav" href="index.html">Home</a>
+        <a class="link-nav" href="basicelements.html">Basic Elements</a>
+        <a class="link-nav" href="Table.html">Table</a>
+        <a class="link-nav" href="PresidentList.html">President List</a>
+        <a class="link-nav" href="cssbasics.html">Css Basics</a>
     </nav>
     <hr />
     <h1>Welcome to Web Basics</h1>
