--- a/software/LibraryWeb/LibraryWeb/wwwroot/A-World-that-Was.html
+++ b/software/LibraryWeb/LibraryWeb/wwwroot/A-World-that-Was.html
@@ -4,16 +4,6 @@
     <meta charset="utf-8" />
     <title>A-World-that-Was</title>
     <link href="css/Styles.css" rel="stylesheet" />
-    <style>
-        .banner {
-            text-align:center;
-            font-size:36px;
-            font-weight:bold;
-            color: #FF0000;
-            background-color:linen;
-            padding:20px;
-        }
-    </style>
 </head>
 <body>
     <header>
@@ -33,7 +23,7 @@
                 <li>Published: 2015</li>
             </ul>
         </div>
-        <div class="banner">Best Seller! 95% Sold Out!</div>
+        <div style="text-align: center; font-size: 36px; font-weight: bold; color: #FF0000; background-color:linen; padding:20px">Best Seller! 95% Sold Out!</div>
     </main>
 </body>
 </html>
