--- a/software/LibraryWeb/LibraryWeb/wwwroot/index.html
+++ b/software/LibraryWeb/LibraryWeb/wwwroot/index.html
@@ -4,12 +4,6 @@
     <meta charset="utf-8" />
     <title>The Book Nook</title>
     <link href="css/Styles.css" rel="stylesheet" />
-    <style>
-        .Image {
-            display:block;
-            margin:auto
-        }
-    </style>
 </head>
 <body>
     <nav>
@@ -19,6 +13,6 @@
     <hr />
     <h1 class="Header">Welcome to The Book Nook</h1>
     <h2 class="Header">This site offers a comprehensive list of the incredible books in our library.</h2>
-    <img src="images/books.jpg" alt="This is a picture of our library shelf" width="600" height="265" class="Image"/>
+    <img src="images/books.jpg" alt="This is a picture of our library shelf" width="600" height="265" style="display:block; margin:auto;"/>
 </body>
 </html>
