--- a/software/JS-Objects/.vscode/14-Hw-Js-post.html
+++ b/software/JS-Objects/.vscode/14-Hw-Js-post.html
@@ -8,48 +8,50 @@
     </div>
     <div class="row">
         <div class="col-6">
-            <form id="frm" action="" method="post" class="needs-validation" style="max-width: 600px; margin: auto; padding: 20px;>
-                <div class=" mb-3">
-                <label for="recipeName" class="form-label">Recipe Name:</label>
-                <input type="text" id="recipeName" name="recipeName" value="milkshake" class="form-control" required>
+            <form id="frm" action="" method="post" class="needs-validation"
+                style="max-width: 600px; margin: auto; padding: 20px; ">
+                <div class="mb-3">
+                    <label for="recipeName" class="form-label">Recipe Name:</label>
+                    <input type="text" id="recipeName" name="recipeName" value="milkshake" class="form-control"
+                        required>
+                </div>
+                <div class="mb-3">
+                    <label for="recipeId" class="form-label">Recipe ID:</label>
+                    <input type="hidden" id="txtrecipeId" name="recipeId" value="0" class="form-control" required>
+                </div>
+                <div class="mb-3">
+                    <label for="cuisineId" class="form-label">Cuisine ID:</label>
+                    <select name="cuisineId" id="lstcuisine" class="form-select"></select>
+                </div>
+                <div class="mb-3">
+                    <label for="usersId" class="form-label">Users ID:</label>
+                    <select name="usersId" id="lstusers" class="form-select"></select>
+                </div>
+                <div class="mb-3">
+                    <label for="calories" class="form-label">Calories:</label>
+                    <input type="number" id="calories" name="calories" value="200" class="form-control" required>
+                </div>
+                <div class="mb-3">
+                    <label for="dateDrafted" class="form-label">Date Drafted:</label>
+                    <input type="date" id="dateDrafted" name="dateDrafted" class="form-control" required>
+                </div>
+                <div class="mb-3">
+                    <label for="datePublished" class="form-label">Date Published:</label>
+                    <input type="date" id="datePublished" name="datePublished" class="form-control" required>
+                </div>
+                <div class="mb-3">
+                    <label for="dateArchived" class="form-label">Date Archived:</label>
+                    <input type="date" id="dateArchived" name="dateArchived" class="form-control" required>
+                </div>
+                <div class="mb-3">
+                    <label for="recipeStatus" class="form-label">Recipe Status:</label>
+                    <input type="text" id="recipeStatus" name="recipeStatus" class="form-control" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+                <button id="btndelete" class="btn btn-danger">Delete</button>
+            </form>
         </div>
-        <div class="mb-3">
-            <label for="recipeId" class="form-label">Recipe ID:</label>
-            <input type="hidden" id="txtrecipeId" name="recipeId" value="0" class="form-control" required>
-        </div>
-        <div class="mb-3">
-            <label for="cuisineId" class="form-label">Cuisine ID:</label>
-            <select name="cuisineId" id="lstcuisine" class="form-select"></select>
-        </div>
-        <div class="mb-3">
-            <label for="usersId" class="form-label">Users ID:</label>
-            <select name="usersId" id="lstusers" class="form-select"></select>
-        </div>
-        <div class="mb-3">
-            <label for="calories" class="form-label">Calories:</label>
-            <input type="number" id="calories" name="calories" value="200" class="form-control" required>
-        </div>
-        <div class="mb-3">
-            <label for="dateDrafted" class="form-label">Date Drafted:</label>
-            <input type="date" id="dateDrafted" name="dateDrafted" class="form-control" required>
-        </div>
-        <div class="mb-3">
-            <label for="datePublished" class="form-label">Date Published:</label>
-            <input type="date" id="datePublished" name="datePublished" class="form-control" required>
-        </div>
-        <div class="mb-3">
-            <label for="dateArchived" class="form-label">Date Archived:</label>
-            <input type="date" id="dateArchived" name="dateArchived" class="form-control" required>
-        </div>
-        <div class="mb-3">
-            <label for="recipeStatus" class="form-label">Recipe Status:</label>
-            <input type="text" id="recipeStatus" name="recipeStatus" class="form-control" required>
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-        <button id="btndelete" class="btn btn-danger">Delete</button>
-        </form>
     </div>
-</div>
 </div>
 
 <script>
