--- a/software/JS-Objects/14-Hw-Js-post.html
+++ b/software/JS-Objects/14-Hw-Js-post.html
@@ -12,8 +12,7 @@
                 style="max-width: 600px; margin: auto; padding: 20px; ">
                 <div class="mb-3">
                     <label for="recipeName" class="form-label">Recipe Name:</label>
-                    <input type="text" id="recipeName" name="recipeName" value="milkshake" class="form-control"
-                        required>
+                    <input type="text" id="recipeName" name="recipeName" class="form-control" required>
                 </div>
                 <div class="mb-3">
                     <label for="recipeId" class="form-label">Recipe ID:</label>
@@ -63,6 +62,11 @@
             const response = await fetch("https://dgrecipeapi.azurewebsites.net/api/cuisine");
             const data = await response.json();
             const lst = document.getElementById("lstcuisine");
+            const blankOption = document.createElement("option");
+            blankOption.value = "";
+            blankOption.text = "";
+            lst.appendChild(blankOption);
+
             data.forEach(c => {
                 const option = document.createElement("option");
                 option.value = c.cuisineId;
@@ -76,6 +80,10 @@
             const response = await fetch("https://dgrecipeapi.azurewebsites.net/api/User");
             const data = await response.json();
             const lst = document.getElementById("lstusers");
+            const blankOption = document.createElement("option");
+            blankOption.value = "";
+            blankOption.text = "";
+            lst.appendChild(blankOption);
             data.forEach(u => {
                 const option = document.createElement("option");
                 option.value = u.usersId;
@@ -89,23 +97,14 @@
         hmsg.innerHTML = "";
         const formdata = new FormData(frm);
         (async () => {
-            try {
-                const response = await fetch("https://dgrecipeapi.azurewebsites.net/api/Recipe/", {
-                    method: "POST",
-                    body: formdata
-                });
-                const data = await response.json();
-
-                if (response.ok) {
-                    txtrecipeid.value = data.recipeid;
-                    hmsg.innerHTML = data.message;
-                } else {
-                    hmsg.innerHTML = data.Message || "Error saving recipe";
-                }
-            } catch (error) {
-                console.error(error);
-                hmsg.innerHTML = "An error occurred while saving the recipe.";
-            }
+            const response = await fetch("https://dgrecipeapi.azurewebsites.net/api/Recipe/", {
+                method: "POST",
+                body: formdata
+            });
+            const data = await response.json();
+            console.log(data);
+            txtrecipeid.value = data.recipeId;
+            hmsg.innerHTML = data.recipe?.errorMessage || "Recipe saved successfully";
         })();
     });
 
@@ -119,22 +118,14 @@
             return;
         }
         (async () => {
-            try {
-                const response = await fetch(`https://dgrecipeapi.azurewebsites.net/api/Recipe?id=${recipeId}`, {
-                    method: "DELETE"
-                });
-                const data = await response.json();
 
-                if (response.ok) {
-                    hmsg.innerHTML = data.message;
-                    frm.reset();
-                } else {
-                    hmsg.innerHTML = data.Message || "Error deleting recipe";
-                }
-            } catch (error) {
-                console.error(error);
-                hmsg.innerHTML = "An error occurred while deleting the recipe.";
-            }
+            const response = await fetch(`https://dgrecipeapi.azurewebsites.net/api/Recipe?id=${recipeId}`, {
+                method: "DELETE"
+            });
+            const data = await response.json();
+            console.log(data);
+            hmsg.innerHTML = data.recipe?.errorMessage || "Recipe deleted successfully";
+
         })();
     })
 </script>
